# course-reviewer-workflow

./: .gitignore  README.md  pyproject.toml  test_unicode_fix.py
deployment/: cloud_run.py  local.py  remote.py
reviewer/: __init__.py  agent.py
reviewer/course_categorizer/: agent.py
reviewer/course_grader/: agent.py
reviewer/score_calculator/: agent.py
reviewer/utils/: weights.py
web-ui/: README.md  index.html  requirements.txt  sample-course.txt  script.js  server.py  styles.css
